--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sistema-delivery",
+  "name": "delicious-express",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "@tailwindcss/vite": "^4.1.14",
     "class-variance-authority": "^0.7.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
     "jspdf": "^3.0.3",
